// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`测试完整流程 注册用户 /v1/auth/register (POST) 1`] = `
Object {
  "accessToken": Any<String>,
  "avatar": Object {
    "createdAt": "2020-05-13 03:58:00",
    "deletedAt": null,
    "filename": "generated-1589342278945-833613972",
    "id": "a66f15fb-678b-43f7-aff6-8200636f0581",
    "mimetype": "image/jpeg",
    "originalname": "generated-1589342278945-833613972",
    "size": 2263,
    "status": "Normal",
    "updatedAt": "2020-05-13 03:58:00",
    "url": "http://localhost:3600/api/v1/file/image/generated-1589342278945-833613972",
  },
  "createdAt": "2020-05-13 03:57:59",
  "deletedAt": null,
  "expiresIn": Any<Number>,
  "id": Any<String>,
  "status": "Normal",
  "updatedAt": "2020-05-13 03:57:59",
  "username": Any<String>,
}
`;

exports[`测试完整流程 随机用户登录 /v1/auth/login (POST) 1`] = `
Object {
  "accessToken": Any<String>,
  "articlesCount": 5,
  "avatar": Object {
    "createdAt": "2020-05-12 16:01:05",
    "deletedAt": null,
    "filename": "generated-1589299264011-499390118",
    "id": "ce9de3c8-4517-424b-983e-b7de775238bd",
    "mimetype": "image/jpeg",
    "originalname": "generated-1589299264011-499390118",
    "size": 3818,
    "status": "Normal",
    "updatedAt": "2020-05-12 16:01:05",
    "url": "http://localhost:3600/api/v1/file/image/generated-1589299264011-499390118",
  },
  "favoritesCount": 5,
  "createdAt": "2020-05-12 16:01:04",
  "deletedAt": null,
  "expiresIn": Any<Number>,
  "id": Any<String>,
  "likeArticlesCount": 5,
  "status": "Normal",
  "updatedAt": "2020-05-12 16:01:05",
  "username": Any<String>,
}
`;
